--- a/wp-content/themes/dikeou-collection/static/src/scss/partials/_blog.scss
+++ b/wp-content/themes/dikeou-collection/static/src/scss/partials/_blog.scss
@@ -1,3 +1,13 @@
+[data-template="blog"] #content .wrapper{
+	@media screen and (min-width: $tablet){
+		box-sizing: border-box;
+		padding-left: 4rem;
+	}
+	@media screen and (min-width: $desktop){
+		padding-left: 8rem;
+	}
+}
+
 article.post{
 	max-width: 640px;
 	width: 100%;
