--- a/wp-content/themes/dikeou-collection/static/src/scss/partials/_event.scss
+++ b/wp-content/themes/dikeou-collection/static/src/scss/partials/_event.scss
@@ -1,3 +1,13 @@
+[data-template="event"] #content .wrapper{
+	@media screen and (min-width: $tablet){
+		box-sizing: border-box;
+		padding-left: 4rem;
+	}
+	@media screen and (min-width: $desktop){
+		padding-left: 8rem;
+	}
+}
+
 .event-header{
 	> h2{
 		font-size: 1rem;
